--- a/Knowledge.ipynb
+++ b/Knowledge.ipynb
@@ -147,11 +147,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "1371c8b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "category : ['BILLING' 'COMPLAINTS' 'CONSUMPTION' 'CONTACT' 'PAYMENT' 'SERVICES'\n",
+      " 'SUBSCRIPTION']\n",
+      "intent : ['dispute_invoice' 'invoices' 'get_compensation'\n",
+      " 'report_poor_signal_coverage' 'report_problem'\n",
+      " 'check_excess_data_charges' 'check_usage' 'set_usage_limits'\n",
+      " 'customer_service' 'human_agent' 'check_mobile_payments'\n",
+      " 'payment_methods' 'pay' 'schedule_payments'\n",
+      " 'activate_call_management_services' 'activate_phone' 'activate_roaming'\n",
+      " 'check_signal_coverage' 'deactivate_call_management_services'\n",
+      " 'deactivate_phone' 'install_internet' 'cancel_plan' 'change_plan'\n",
+      " 'change_provider' 'check_cancellation_fee' 'sign_up_for_plan']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"category :\", df[\"category\"].unique())\n",
+    "\n",
+    "print(\"intent :\", df['intent'].unique())"
+   ]
   }
  ],
  "metadata": {
