--- a/Knowledge.ipynb
+++ b/Knowledge.ipynb
@@ -175,6 +175,268 @@
     "\n",
     "print(\"intent :\", df['intent'].unique())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "db3c79a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instruction</th>\n",
+       "      <th>intent</th>\n",
+       "      <th>category</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Show me my latest invoice.</td>\n",
+       "      <td>invoices</td>\n",
+       "      <td>BILLING</td>\n",
+       "      <td>billing,invoices</td>\n",
+       "      <td>We can help you with invoices. Please follow t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I want to pay my bill.</td>\n",
+       "      <td>pay</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>payment,pay</td>\n",
+       "      <td>We can help you with pay. Please follow the in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I want to speak to a human agent.</td>\n",
+       "      <td>human_agent</td>\n",
+       "      <td>CONTACT</td>\n",
+       "      <td>contact,human_agent</td>\n",
+       "      <td>We can help you with human agent. Please follo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What payment methods are available?</td>\n",
+       "      <td>payment_methods</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>payment,payment_methods</td>\n",
+       "      <td>We can help you with payment methods. Please f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>How much data have I used?</td>\n",
+       "      <td>check_usage</td>\n",
+       "      <td>CONSUMPTION</td>\n",
+       "      <td>consumption,check_usage</td>\n",
+       "      <td>We can help you with check usage. Please follo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           instruction           intent     category  \\\n",
+       "0           Show me my latest invoice.         invoices      BILLING   \n",
+       "1               I want to pay my bill.              pay      PAYMENT   \n",
+       "2    I want to speak to a human agent.      human_agent      CONTACT   \n",
+       "3  What payment methods are available?  payment_methods      PAYMENT   \n",
+       "4           How much data have I used?      check_usage  CONSUMPTION   \n",
+       "\n",
+       "                      tags                                           response  \n",
+       "0         billing,invoices  We can help you with invoices. Please follow t...  \n",
+       "1              payment,pay  We can help you with pay. Please follow the in...  \n",
+       "2      contact,human_agent  We can help you with human agent. Please follo...  \n",
+       "3  payment,payment_methods  We can help you with payment methods. Please f...  \n",
+       "4  consumption,check_usage  We can help you with check usage. Please follo...  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv(\"synthetic_query_dataset.csv\")\n",
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fd5e2c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=['tags'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "83f348a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 26000 entries, 0 to 25999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   instruction  26000 non-null  object\n",
+      " 1   intent       26000 non-null  object\n",
+      " 2   category     26000 non-null  object\n",
+      " 3   response     26000 non-null  object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 812.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "23ab7c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.drop(columns=['tags'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "37136567",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3500 entries, 0 to 3499\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   instruction  3500 non-null   object\n",
+      " 1   intent       3500 non-null   object\n",
+      " 2   category     3500 non-null   object\n",
+      " 3   response     3500 non-null   object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 109.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "69399a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.documents import Document\n",
+    "document = []\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    content = f\"\"\"\n",
+    "Category: {row['category']}\n",
+    "User Intent: {row['instruction']}\n",
+    "Agent Response: {row['response']}\n",
+    "Intent: {row.get('intent', '')}\n",
+    "\"\"\"\n",
+    "    document.append(\n",
+    "        Document(\n",
+    "            page_content=content.strip(),\n",
+    "            metadata={\n",
+    "                \"category\": row[\"category\"],\n",
+    "                \"priority\": row.get(\"priority\", \"normal\")\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "for _, row in df1.iterrows():\n",
+    "    content = f\"\"\"\n",
+    "Category: {row['category']}\n",
+    "User Intent: {row['instruction']}\n",
+    "Agent Response: {row['response']}\n",
+    "Intent: {row.get('intent', '')}\n",
+    "\"\"\"\n",
+    "    document.append(\n",
+    "        Document(\n",
+    "            page_content=content.strip(),\n",
+    "            metadata={\n",
+    "                \"category\": row[\"category\"],\n",
+    "                \"priority\": row.get(\"priority\", \"normal\")\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6cca1342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=500,\n",
+    "    chunk_overlap=50\n",
+    ")\n",
+    "\n",
+    "documents = splitter.split_documents(document)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21cf6f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "\n",
+    "embeddings = HuggingFaceEmbeddings(\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\"\n",
+    ")\n",
+    "\n",
+    "# Test it immediately to ensure it works\n",
+    "vector = embeddings.embed_query(\"Hello world\")\n",
+    "print(len(vector))  # Should print 384 for BGE-small"
+   ]
   }
  ],
  "metadata": {
