--- a/Knowledge.ipynb
+++ b/Knowledge.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "c8c9ed79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\prame\\OneDrive\\Desktop\\codes\\GitHub\\Hackathon\\10_Vajha-Thrishal-Vignesh\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "9e4a79be",
    "metadata": {},
    "outputs": [
@@ -107,7 +116,7 @@
        "4  BILLING    BCQW  If you believe there is an error on your bill ...  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "80fdf78d",
    "metadata": {},
    "outputs": [
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "1371c8b7",
    "metadata": {},
    "outputs": [
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "db3c79a4",
    "metadata": {},
    "outputs": [
@@ -271,7 +280,7 @@
        "4  consumption,check_usage  We can help you with check usage. Please follo...  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "fd5e2c74",
    "metadata": {},
    "outputs": [],
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "83f348a9",
    "metadata": {},
    "outputs": [
@@ -321,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "23ab7c8a",
    "metadata": {},
    "outputs": [],
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "37136567",
    "metadata": {},
    "outputs": [
@@ -359,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "69399a7d",
    "metadata": {},
    "outputs": [],
@@ -405,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "6cca1342",
    "metadata": {},
    "outputs": [],
@@ -423,9 +432,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21cf6f3e",
+   "id": "df1b83d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\prame\\AppData\\Local\\Temp\\ipykernel_18024\\1855011206.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "\n",
@@ -433,9 +458,32 @@
     "    model_name=\"BAAI/bge-small-en-v1.5\"\n",
     ")\n",
     "\n",
-    "# Test it immediately to ensure it works\n",
     "vector = embeddings.embed_query(\"Hello world\")\n",
-    "print(len(vector))  # Should print 384 for BGE-small"
+    "print(len(vector)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920c5f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_chroma import Chroma\n",
+    "import os\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "os.environ[\"CHROMA_HOST\"] = \"https://api.trychroma.com\"\n",
+    "\n",
+    "vectorstore = Chroma(\n",
+    "    collection_name=\"kb_rag\",\n",
+    "    embedding_function=embeddings,\n",
+    "    chroma_cloud_api_key=os.getenv(\"CHROMA_API_KEY\"),\n",
+    "    persist_directory=None\n",
+    ")\n",
+    "\n",
+    "vectorstore.add_documents(documents)"
    ]
   }
  ],
