--- a/Knowledge.ipynb
+++ b/Knowledge.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "c8c9ed79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\prame\\OneDrive\\Desktop\\codes\\GitHub\\Hackathon\\10_Vajha-Thrishal-Vignesh\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -368,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "69399a7d",
    "metadata": {},
    "outputs": [],
@@ -399,6 +390,7 @@
     "User Intent: {row['instruction']}\n",
     "Agent Response: {row['response']}\n",
     "Intent: {row.get('intent', '')}\n",
+    "\n",
     "\"\"\"\n",
     "    document.append(\n",
     "        Document(\n",
@@ -408,13 +400,12 @@
     "                \"priority\": row.get(\"priority\", \"normal\")\n",
     "            }\n",
     "        )\n",
-    "    )\n",
-    "    "
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "6cca1342",
    "metadata": {},
    "outputs": [],
@@ -422,8 +413,8 @@
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "\n",
     "splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=500,\n",
-    "    chunk_overlap=50\n",
+    "    chunk_size=1500,\n",
+    "    chunk_overlap=200,\n",
     ")\n",
     "\n",
     "documents = splitter.split_documents(document)\n"
@@ -431,15 +422,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df1b83d3",
+   "execution_count": 21,
+   "id": "714874f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29500"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b84c7ed3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prame\\AppData\\Local\\Temp\\ipykernel_18024\\1855011206.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\prame\\AppData\\Local\\Temp\\ipykernel_1708\\3144183633.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = HuggingFaceEmbeddings(\n"
      ]
     },
@@ -447,49 +459,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "384\n"
+      "WARNING:tensorflow:From c:\\Users\\prame\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "Embeddings loaded successfully!\n"
      ]
     }
    ],
    "source": [
+    "# Keep using this import\n",
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "\n",
+    "# This will now work because we pinned sentence-transformers < 3.0\n",
     "embeddings = HuggingFaceEmbeddings(\n",
     "    model_name=\"BAAI/bge-small-en-v1.5\"\n",
     ")\n",
     "\n",
-    "vector = embeddings.embed_query(\"Hello world\")\n",
-    "print(len(vector)) "
+    "print(\"Embeddings loaded successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7ff45ea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 Initializing Embedding Model...\n",
+      "🔗 Connecting to Chroma Cloud...\n",
+      "🚀 Starting upload of 29500 documents...\n",
+      "📦 Batch size: 100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading Batches: 100%|██████████| 295/295 [34:51<00:00,  7.09s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Upload process complete!\n",
+      "📊 Total documents currently in Cloud DB: 29500\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "\n",
+    "try:\n",
+    "    from tqdm import tqdm\n",
+    "except ImportError:\n",
+    "    def tqdm(iterable, **kwargs): return iterable\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "CHROMA_API_KEY = os.getenv(\"CHROMA_API_KEY\")\n",
+    "CHROMA_TENANT = os.getenv(\"CHROMA_TENANT\")\n",
+    "CHROMA_DATABASE = os.getenv(\"CHROMA_DATABASE\")\n",
+    "\n",
+    "print(\"Connecting to Chroma Cloud...\")\n",
+    "vector_store = Chroma(\n",
+    "    collection_name=\"my_cloud_collection\", \n",
+    "    embedding_function=embeddings,\n",
+    "    chroma_cloud_api_key=CHROMA_API_KEY,\n",
+    "    tenant=CHROMA_TENANT,\n",
+    "    database=CHROMA_DATABASE,\n",
+    ")\n",
+    "\n",
+    "if 'documents' in locals() and documents:\n",
+    "    total_docs = len(documents)\n",
+    "    BATCH_SIZE = 100  # Safe limit (well under the 1000 limit)\n",
+    "    \n",
+    "    print(f\" Starting upload of {total_docs} documents...\")\n",
+    "    print(f\" Batch size: {BATCH_SIZE}\")\n",
+    "\n",
+    "    # Process in chunks\n",
+    "    for i in tqdm(range(0, total_docs, BATCH_SIZE), desc=\"Uploading Batches\"):\n",
+    "        batch = documents[i : i + BATCH_SIZE]\n",
+    "        try:\n",
+    "            vector_store.add_documents(documents=batch)\n",
+    "            # Small sleep to prevent hitting API rate limits\n",
+    "            time.sleep(0.2) \n",
+    "        except Exception as e:\n",
+    "            print(f\" Error on batch {i}: {e}\")\n",
+    "            # Optional: break or continue depending on how strict you want to be\n",
+    "    \n",
+    "    print(\"Upload process complete!\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"'documents' list is empty or not defined.\")\n",
+    "\n",
+    "try:\n",
+    "    final_count = vector_store._collection.count()\n",
+    "    print(f\" Total documents currently in Cloud DB: {final_count}\")\n",
+    "except Exception as e:\n",
+    "    print(f\" Could not verify count: {e}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920c5f9b",
+   "id": "793e3de7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from langchain_chroma import Chroma\n",
-    "import os\n",
-    "import dotenv\n",
-    "dotenv.load_dotenv()\n",
-    "\n",
-    "os.environ[\"CHROMA_HOST\"] = \"https://api.trychroma.com\"\n",
-    "\n",
-    "vectorstore = Chroma(\n",
-    "    collection_name=\"kb_rag\",\n",
-    "    embedding_function=embeddings,\n",
-    "    chroma_cloud_api_key=os.getenv(\"CHROMA_API_KEY\"),\n",
-    "    persist_directory=None\n",
-    ")\n",
-    "\n",
-    "vectorstore.add_documents(documents)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "10-vajha-thrishal-vignesh",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
