--- a/Knowledge.ipynb
+++ b/Knowledge.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "69399a7d",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "6cca1342",
    "metadata": {},
    "outputs": [],
@@ -413,8 +413,8 @@
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "\n",
     "splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1500,\n",
-    "    chunk_overlap=200,\n",
+    "    chunk_size=500,\n",
+    "    chunk_overlap=50,\n",
     ")\n",
     "\n",
     "documents = splitter.split_documents(document)\n"
@@ -422,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "714874f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29500"
+       "57445"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b84c7ed3",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prame\\AppData\\Local\\Temp\\ipykernel_1708\\3144183633.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\prame\\AppData\\Local\\Temp\\ipykernel_7176\\3144183633.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = HuggingFaceEmbeddings(\n"
      ]
     },
@@ -459,8 +459,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\prame\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n",
       "Embeddings loaded successfully!\n"
      ]
     }
@@ -479,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "7ff45ea2",
    "metadata": {},
    "outputs": [
@@ -487,25 +485,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔄 Initializing Embedding Model...\n",
-      "🔗 Connecting to Chroma Cloud...\n",
-      "🚀 Starting upload of 29500 documents...\n",
-      "📦 Batch size: 100\n"
+      "Connecting to Chroma Cloud...\n",
+      " Starting upload of 57445 documents...\n",
+      " Batch size: 100\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Batches: 100%|██████████| 295/295 [34:51<00:00,  7.09s/it]\n"
+      "Uploading Batches: 100%|██████████| 575/575 [30:00<00:00,  3.13s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Upload process complete!\n",
-      "📊 Total documents currently in Cloud DB: 29500\n"
+      "Upload process complete!\n",
+      " Total documents currently in Cloud DB: 57445\n"
      ]
     }
    ],
@@ -538,7 +535,7 @@
     "\n",
     "if 'documents' in locals() and documents:\n",
     "    total_docs = len(documents)\n",
-    "    BATCH_SIZE = 100  # Safe limit (well under the 1000 limit)\n",
+    "    BATCH_SIZE = 100  \n",
     "    \n",
     "    print(f\" Starting upload of {total_docs} documents...\")\n",
     "    print(f\" Batch size: {BATCH_SIZE}\")\n",
